# pyshader_minifier

./: .gitignore  README.md  pyinstaller.spec  pyproject.toml
shader_minifier/: __init__.py  __main__.py  diffmodel.py  entropy.py  mainwindow.py  mainwindow.ui  minifier.py  scheduler.py  vcs.py  version.py  versionmodel.py  watcher.py
tests/: simple_error_shader.frag  simple_shader.frag  test_minifier.py
