[tool.poetry]
name = "shader-minifier"
version = "0.1.0"
description = "Shader minifier interface and validation library for Python."
authors = ["Alexander Kraus <nr4@z10.info>"]
license = "GPLv3"
readme = "README.md"
packages = [
    { include="shader_minifier" },
    { include="tests" },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
PyOpenGL = "^3.1.7"
cached-path = "^1.6.0"
pygit2 = "^1.14.1"
parse = "^1.20.1"
pyqt6 = "^6.6.1"
pip = "^24.2"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.5.0"
snakeviz = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
